@@ -22,6 +22,7 @@ Z* -------------------------------------------------------------------
 #include"DistSet.h"
 #include"ObjectMap.h"
 #include"OVOneToAny.h"
+#include"Match.h"
 
 #define cSelectionAll 0
 #define cSelectionNone 1
@@ -97,9 +98,9 @@ void SelectorDeletePrefixSet(PyMOLGlobals *G,char *pref);
 void SelectorUpdateCmd(PyMOLGlobals *G,int sele0,int sele1,int sta0,int sta1,int method,int quiet);
 int SelectorGetSingleAtomVertex(PyMOLGlobals *G,int sele,int state,float *v);
 int SelectorGetSingleAtomObjectIndex(PyMOLGlobals *G,int sele,ObjectMolecule **in_obj,int *index);
-int *SelectorGetResidueVLA(PyMOLGlobals *G,int sele0);
+int *SelectorGetResidueVLA(PyMOLGlobals *G,int sele0,int all_atoms);
 int  SelectorCreateAlignments(PyMOLGlobals *G,int *pair,int sele1,int *vla1,int sele2,
-                              int *vla2,char *name1,char *name2,int identical);
+                              int *vla2,char *name1,char *name2,int identical,int atomic_input);
 int SelectorGetPairIndices(PyMOLGlobals *G,int sele1,int state1,int sele2,int state2,
                            int mode,float cutoff,float h_angle,
                            int **indexVLA, ObjectMolecule ***objVLA);
@@ -148,6 +149,9 @@ ObjectMolecule *SelectorGetFastSingleAtomObjectIndex(PyMOLGlobals *G,int sele,in
 ObjectMolecule *SelectorGetFastSingleObjectMolecule(PyMOLGlobals *G,int sele);
 MapType *SelectorGetSpacialMapFromSeleCoord(PyMOLGlobals *G,int sele,int state,float cutoff,float **coord_vla);
 int SelectorNameIsKeyword(PyMOLGlobals *G, char *name);
+int SelectorResidueVLAsTo3DMatchScores(PyMOLGlobals *G, CMatch *match,
+                                       int *vla1,int n1,int state1,int sele1,
+                                       int *vla2,int n2,int state2,int sele2);
 
 /* reserve special meaning for tags 1-15 and note that 0 is disallowed */
 
